# lapack

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  COPYING  CTestCustom.cmake.in  CheckTimeFunction.cmake  LICENSE  Makefile  README  README.md  appveyor.yml  cmake_install.cmake  dcombssq.f  err  in dlarft exceding column 72 when compiling with -DLAPACK64 OBOBOB  lapack-config-install.cmake.in  lapack.pc.in  lapack_build.cmake  lapack_testing.py  libCompile  make.inc.example  meson.build  testOutput
BLAS/SRC/: CMakeLists.txt  Makefile  caxpby.f  caxpy.f  ccopy.f  cdotc.f  cdotu.f  cgbmv.f  cgemm.f  cgemm_batch.f90  cgemmt.f  cgemmtr.f  cgemv.f  cgerc.f  cgeru.f  chbmv.f  chemm.f  chemv.f  cher.f  cher2.f  cher2k.f  cherk.f  chpmv.f  chpr.f  chpr2.f  crotc.f90  crotg.f  crotg.f90  cscal.f  csrot.f  csscal.f  cswap.f  csymm.f  csyr2k.f  csyrk.f  ctbmv.f  ctbsv.f  ctpmv.f  ctpsv.f  ctrmm.f  (+163 more)
BLAS/TESTING/: CMakeLists.txt  Makeblat1  Makeblat2  Makeblat3  Makefile  cblat1.f  cblat2.f  cblat3.f  cblat3.in  dblat1.f  dblat2.f  dblat2.in  dblat3.f  dblat3.in  sblat1.f  sblat2.f  sblat2.in  sblat3.f  sblat3.in  zblat1.f  zblat2.f  zblat3.f  zblat3.in
CBLAS/: CMakeLists.txt  Makefile  Makefile.in  README  cblas.pc.in
CBLAS/cmake/: cblas-config-build.cmake.in  cblas-config-install.cmake.in
CBLAS/examples/: CMakeLists.txt  Makefile  cblas_example1.c  cblas_example1_64.c  cblas_example2.c  cblas_example2_64.c
CBLAS/include/: CMakeLists.txt  cblas.h  cblas_64.h  cblas_f77.h  cblas_globals.h  cblas_test.h
CBLAS/src/: CMakeLists.txt  Makefile  cblas_caxpby.c  cblas_caxpy.c  cblas_ccopy.c  cblas_cdotc_sub.c  cblas_cdotu_sub.c  cblas_cgbmv.c  cblas_cgemm.c  cblas_cgemmt.c  cblas_cgemmtr.c  cblas_cgemv.c  cblas_cgerc.c  cblas_cgeru.c  cblas_chbmv.c  cblas_chemm.c  cblas_chemv.c  cblas_cher.c  cblas_cher2.c  cblas_cher2k.c  cblas_cherk.c  cblas_chpmv.c  cblas_chpr.c  cblas_chpr2.c  cblas_crotg.c  cblas_cscal.c  cblas_csrot.c  cblas_csscal.c  cblas_cswap.c  cblas_csymm.c  cblas_csyr2k.c  cblas_csyrk.c  cblas_ctbmv.c  cblas_ctbsv.c  cblas_ctpmv.c  cblas_ctpsv.c  cblas_ctrmm.c  cblas_ctrmv.c  cblas_ctrsm.c  cblas_ctrsv.c  (+163 more)
CBLAS/testing/: CMakeLists.txt  Makefile  auxiliary.c  c_c2chke.c  c_c3chke.c  c_cblas1.c  c_cblas2.c  c_cblas3.c  c_cblat1.f  c_cblat2.f  c_cblat3.f  c_d2chke.c  c_d3chke.c  c_dblas1.c  c_dblas2.c  c_dblas3.c  c_dblat1.f  c_dblat2.f  c_dblat3.f  c_s2chke.c  c_s3chke.c  c_sblas1.c  c_sblas2.c  c_sblas3.c  c_sblat1.f  c_sblat2.f  c_sblat3.f  c_xerbla.c  c_z2chke.c  c_z3chke.c  c_zblas1.c  c_zblas2.c  c_zblas3.c  c_zblat1.f  c_zblat2.f  c_zblat3.f  cin3  din2  din3  sin2  (+2 more)
INSTALL/: CMakeLists.txt  LAPACK_version.f  Makefile  dlamch.f  dlamchf77.f  dlamchtst.f  droundup_lwork.f  dsecnd_EXT_ETIME.f  dsecnd_EXT_ETIME_.f  dsecnd_INT_CPU_TIME.f  dsecnd_INT_ETIME.f  dsecnd_NONE.f  dsecndtst.f  ilaver.f  lpk_gnumake.tar  lsame.f  lsametst.f  make.inc.ALPHA  make.inc.HPPA  make.inc.IRIX64  make.inc.O2K  make.inc.RS6K  make.inc.SGI5  make.inc.SUN4  make.inc.SUN4SOL2  make.inc.XLF  make.inc.gfortran  make.inc.gfortran-quad  make.inc.gfortran_debug  make.inc.ifort  make.inc.nagfor  make.inc.nv  make.inc.pgf95  make.inc.pghpf  second_EXT_ETIME.f  second_EXT_ETIME_.f  second_INT_CPU_TIME.f  second_INT_ETIME.f  second_NONE.f  secondtst.f  (+9 more)
LAPACKE/: CMakeLists.txt  Makefile  lapacke.pc.in
LAPACKE/cmake/: lapacke-config-build.cmake.in  lapacke-config-install.cmake.in  lapacke-config-version.cmake.in
LAPACKE/example/: CMakeLists.txt  Makefile  example_DGELS_colmajor.c  example_DGELS_colmajor_64.c  example_DGELS_rowmajor.c  example_DGELS_rowmajor_64.c  example_DGESV_colmajor.c  example_DGESV_colmajor_64.c  example_DGESV_rowmajor.c  example_DGESV_rowmajor_64.c  lapacke_example_aux.c  lapacke_example_aux.h
LAPACKE/include/: CMakeLists.txt  lapack.h  lapacke.h  lapacke_64.h  lapacke_config.h  lapacke_utils.h
LAPACKE/mangling/: CMakeLists.txt
LAPACKE/src/: CMakeLists.txt  Makefile  lapacke_cbbcsd.c  lapacke_cbbcsd_work.c  lapacke_cbdsqr.c  lapacke_cbdsqr_work.c  lapacke_cgbbrd.c  lapacke_cgbbrd_work.c  lapacke_cgbcon.c  lapacke_cgbcon_work.c  lapacke_cgbequ.c  lapacke_cgbequ_work.c  lapacke_cgbequb.c  lapacke_cgbequb_work.c  lapacke_cgbrfs.c  lapacke_cgbrfs_work.c  lapacke_cgbrfsx.c  lapacke_cgbrfsx_work.c  lapacke_cgbsv.c  lapacke_cgbsv_work.c  lapacke_cgbsvx.c  lapacke_cgbsvx_work.c  lapacke_cgbsvxx.c  lapacke_cgbsvxx_work.c  lapacke_cgbtrf.c  lapacke_cgbtrf_work.c  lapacke_cgbtrs.c  lapacke_cgbtrs_work.c  lapacke_cgebak.c  lapacke_cgebak_work.c  lapacke_cgebal.c  lapacke_cgebal_work.c  lapacke_cgebrd.c  lapacke_cgebrd_work.c  lapacke_cgecon.c  lapacke_cgecon_work.c  lapacke_cgecxx.c  lapacke_cgecxx_work.c  lapacke_cgedmd.c  lapacke_cgedmd_work.c  (+2655 more)
LAPACKE/utils/: CMakeLists.txt  Makefile  lapacke_c_nancheck.c  lapacke_cgb_nancheck.c  lapacke_cgb_trans.c  lapacke_cge_nancheck.c  lapacke_cge_trans.c  lapacke_cgg_nancheck.c  lapacke_cgg_trans.c  lapacke_cgt_nancheck.c  lapacke_chb_nancheck.c  lapacke_chb_trans.c  lapacke_che_nancheck.c  lapacke_che_trans.c  lapacke_chp_nancheck.c  lapacke_chp_trans.c  lapacke_chs_nancheck.c  lapacke_chs_trans.c  lapacke_cpb_nancheck.c  lapacke_cpb_trans.c  lapacke_cpf_nancheck.c  lapacke_cpf_trans.c  lapacke_cpo_nancheck.c  lapacke_cpo_trans.c  lapacke_cpp_nancheck.c  lapacke_cpp_trans.c  lapacke_cpt_nancheck.c  lapacke_csp_nancheck.c  lapacke_csp_trans.c  lapacke_cst_nancheck.c  lapacke_csy_nancheck.c  lapacke_csy_trans.c  lapacke_ctb_nancheck.c  lapacke_ctb_trans.c  lapacke_ctf_nancheck.c  lapacke_ctf_trans.c  lapacke_ctp_nancheck.c  lapacke_ctp_trans.c  lapacke_ctr_nancheck.c  lapacke_ctr_trans.c  (+124 more)
TESTING/cpp/: CMakeLists.txt  cggqrcs.cpp  config.h  dggqrcs.cpp  ggqrcs.hpp  ggsvd_vs_ggqrcs.cpp  lapack.hpp  main.cpp  sggqrcs.cpp  zggqrcs.cpp
lapack/trunk/: CMakeLists.txt  CTestCustom.cmake.in  CheckTimeFunction.cmake  LICENSE  Makefile  README  lapack-config.cmake.in  lapack_build.cmake  lapack_testing.py  (+1 more)
lapacke/: CMakeLists.txt  LICENSE  Makefile  lapacke.pc.in  make.gnu.lc  make.gnu.uc.ilp64  make.inc  make.intel  make.intel.uc
(+11766 files in other folders)
